[Fix]:fix z-index

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -63,6 +63,7 @@ body {
   position: absolute;
   height: 14em;
   bottom: -1em;
+  z-index: 2;
 }
 
 .showCardContainer {
@@ -137,7 +138,7 @@ body {
   width: auto;
   position: relative;
   padding-right: 0;
-  z-index: 2;
+  z-index: 3;
 }
 
 .card.show>div:first-child {
